fix: vertical align of paragraph of step block
set the line of paragraph at the same height that numbered indicator

--- a/asset/css/sell.css
+++ b/asset/css/sell.css
@@ -233,6 +233,7 @@ section {
 
 .step-block .content-text {
     margin-top: calc(var(--padding-number_point)/2);
+    align-self: self-start;
 }
 
 .info-button {
